--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,9 @@
   <title>React App</title>
 </head>
 
-<body class="inte__Sidebar--expanded">
+<!-- class="inte__Sidebar--expanded" -->
+
+<body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!--
